# ucl-lang

./: CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  ROADMAP.md  pyproject.toml  steelconf
.vitte-cache/diagnostics/: help-cache.json
bench/python/: bench_parser.py
docs/grammar/: examples.ucl  ucl.ebnf  ucl.lexical.ebnf
docs/grammar/snapshots/: ucl-v0.1.ebnf
src/dots/: bench.dotS  build.dotS  ci.dotS  docs.dotS  examples.dotS  format.dotS  lint.dotS  package.dotS  release.dotS  test.dotS
src/python/scripts/: benchmark.py  build_wheels.py  compare_outputs.py  release.py
src/python/tools/: dump_ast.py  dump_tokens.py  fuzz_seed_builder.py  gen_keyword_table.py  normalize_examples.py  snapshot_parser.py
src/python/ucl_py/: __init__.py  ast.py  cli.py  convert_json.py  convert_toml.py  convert_yaml.py  diagnostics.py  evaluator.py  formatter.py  imports.py  lexer.py  parser.py  schema.py  tokens.py  validator.py  version.py
src/vitte/api/: evaluate.vit  export.vit  mod.vit  parse.vit  validate.vit
src/vitte/ast/: expr.vit  macro.vit  mod.vit  profile.vit  program.vit  schema.vit  stmt.vit  template.vit  types.vit  value.vit  visitor.vit
src/vitte/cli/: app.vit  doctor_cmd.vit  eval_cmd.vit  fmt_cmd.vit  json_cmd.vit  mod.vit  parse_cmd.vit  toml_cmd.vit  validate_cmd.vit  yaml_cmd.vit
src/vitte/cmd/ucl/: main.vit
src/vitte/convert/: dict.vit  json.vit  mod.vit  toml.vit  yaml.vit
src/vitte/diag/: codes.vit  error.vit  mod.vit  render.vit  report.vit  warning.vit
src/vitte/eval/: env.vit  expressions.vit  finalizer.vit  imports.vit  macros.vit  mod.vit  profiles.vit  references.vit  resolver.vit  scope.vit  templates.vit
src/vitte/format/: formatter.vit  mod.vit  printer.vit  style.vit
src/vitte/fs/: cache.vit  loader.vit  mod.vit  paths.vit  virtual_fs.vit
src/vitte/hir/: lower.vit  mod.vit  node.vit  path.vit  symbol.vit
src/vitte/parser/: diagnostics.vit  expression.vit  imports.vit  macros.vit  mod.vit  parser.vit  precedence.vit  program.vit  recovery.vit  schema.vit  section.vit  statement.vit  templates.vit
src/vitte/schema/: constraints.vit  diagnostics.vit  mod.vit  rules.vit  types.vit  validator.vit
src/vitte/ucl/: mod.vit
src/vitte/util/: map.vit  mod.vit  option.vit  result.vit  string.vit  vec.vit
tests/corpus/invalid/: bad-import.ucl  bad-number.ucl  bad-schema.ucl  bad-string.ucl
tests/corpus/valid/: basic.ucl  expressions.ucl  imports.ucl  macros.ucl  profiles.ucl  schemas.ucl
tests/python/: test_cli.py  test_convert.py  test_eval.py  test_formatter.py  test_lexer.py  test_parser.py  test_schema.py
tests/vitte/: schema_test.vit
